<resources>
    <string name="app_name">ProjectMobile</string>
    <string name="daftar">Daftar Mobil</string>
    <string name="pesan">Pemesanan</string>
    <string name="histori">Histori</string>
    <string name="desc">Aplikasi ini dibuat menggunakan Android Studio dibuat untuk Project Akhir dari Mata Kuliah Pengembangan Aplikasi Mobile.</string>
    <string name="desc2">Aplikasi ini menggunakanan Firebase Authentication, Firebase Firestore, Realtime Firebase</string>
    <string name="desc3">Android Studio Bumblebee | 2021.1.1 Patch 2
Build #AI-211.7628.21.2111.8193401, built on February 17, 2022
Runtime version: 11.0.11+9-b60-7590822 amd64
VM: OpenJDK 64-Bit Server VM by Oracle Corporation
Windows 10 10.0
GC: G1 Young Generation, G1 Old Generation
Memory: 1280M
Cores: 12
Registry: external.system.auto.import.disabled=true
Non-Bundled Plugins: org.jetbrains.kotlin (211-1.6.10-release-923-AS7442.40)</string>
    <string name="about">About</string>
    <string name="labelApp">Sugarseries Car</string>
    <string name="labelHave">Do you have an account ?</string>
    <string name="labelRegister">Register</string>
    <string name="labelNama">Nama</string>
    <string name="labelPass">Password</string>
    <string name="txButtonSigin">Login</string>
    <string name="labelemail">Email</string>
    <string name="labelNohp">NoHp</string>
    <string name="save">Pesan</string>
    <string name="isian">Blank</string>
    <string name="tgl">Pilih Tanggal</string>
    <string name="pesantravel">Pesan Travel</string>
    <string name="isiAlamat">Alamat</string>
    <string name="labelJK">Jenis Kelamin</string>
    <string name="labelLogin">Login</string>
    <string name="tag">Ayo gunakan jasa kami !</string>
    <string name="toregister">Dont have an account ?</string>
    <string name="tologin">Already have an account ?</string>
    <string name="labelrePass">Masukkan Password</string>
</resources>